--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -362,6 +362,8 @@ sexy_DATA: $(un_sexy_DATA)
 		if ! test -f $$f; then \
 			echo "ex -E -n -s -X '+1,$${eol}s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' '+wq! $$f' '$$d$$p';'"; \
 			ex -E -n -s -X '+1,${eol}s/\(class="\)Gtk\(TreeView"\)/\1Sexy\2/g' "+wq! $$f" "$$d$$p"; \
+			echo "ex -E -n -s -X '+1,$${eol}s/^\([\t\ ]\+<object class="Gtk[VH]Separator".*\n.*\n.*\n.*\n.*<packing>\n\)\(.*<property name="\""\)\(expand\)\("\"">\)[^<]\+\(<\/property>\)\(\n.*<property name="\""fill"\"">[^<]*<\/property>\)\?/\1\2\3\4True\5\r\2fill\4True\5\r\/' '+wq' '$$f';" \
+			ex -E -n -s -X '+1,${eol}s/^\([\t\ ]\+<object class="Gtk[VH]Separator".*\n.*\n.*\n.*\n.*<packing>\n\)\(.*<property name="\)\(expand\)\(">\)[^<]\+\(<\/property>\)\(\n.*<property name="fill">[^<]*<\/property>\)\?/\1\2\3\4True\5\r\2fill\4True\5\r\/' '+wq' "$$f"; \
 		fi; \
 	done
 clean-sexy-data:
