--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -19,7 +19,8 @@
 
 GETTEXT_PACKAGE = @GETTEXT_PACKAGE@
 PACKAGE = @PACKAGE@
-VERSION = @VERSION@
+VERSION = "@VERSION@"
+RELEASE = @RELEASE@
 
 SHELL = /bin/sh
 
@@ -40,7 +41,7 @@ install_sh = @install_sh@
 # Automake >= 1.8 provides @mkdir_p@.
 # Until it can be supposed, use the safe fallback:
 mkdir_p = $(install_sh) -d
-distdir = ../$(PACKAGE)-$(VERSION)/$(subdir)
+distdir = ../$(PACKAGE)-$(VERSION)$(RELEASE)/$(subdir)
 
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
