--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -48,6 +48,7 @@ src/timelines-sexy-tree-view.c
 src/timer.c
 src/ui-utils.c
 src/update-viewer.c
-src/users.c
 src/users-glists.c
+src/users.c
+src/www.c
 
