--- a/config.h.in
+++ b/config.h.in
@@ -76,6 +76,9 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* Define to the version of this package. */
+#undef PACKAGE_RELEASE
+
 /* Define where this package was installed to. */
 #undef PACKAGE_PREFIX
 
